--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">November 13, 2024</span>
-									<h2><a href="#", style="text-transform:none; font-size: 42px; font-family: 'Aptos';">Real Estate Property Listings<br/>
+									<h2><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" style="text-transform:none; font-size: 42px; font-family: 'Aptos';">Real Estate Property Listings<br/>
 									Analysis</a></h2>
 									<p style="font-style: normal;">Analysis of 100,000+ Real Estate Property Listings<br/> including Apartments, Town Houses, Houses and Vacant Plots across different suburbs within Nairobi, Kenya.</p>
 								</header>
-								<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="image main"><img src="images/real estate.jpg" alt="" /></a>
+								<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image main"><img src="images/real estate.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="button large", style="text-transform: none; font-size: 17px; font-family: 'Aptos';">View Project</a></li>
+									<li><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button large", style="text-transform: none; font-size: 17px; font-family: 'Aptos';">View Project</a></li>
 								</ul>
 							</article>
 
@@ -61,67 +61,67 @@
 								<article>
 									<header>
 										<span class="date">October 1, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us">Road Accidents within Nairobi, Kenya</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">Road Accidents within Nairobi, Kenya</a></h2>
 									</header>
-									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="image fit"><img src="images/road accidents.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/road accidents.jpeg" alt="" /></a>
 									<p>Analysis of Crowd-Sourced Road Crash Data from the Ma3Route platform.</p>
 									<ul class="actions special">
-										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="button">Full Story</a></li>
+										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">October 7, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us">Impact of Airbnb on Neighborhoods</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">Impact of Airbnb on Neighborhoods</a></h2>
 									</header>
-									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="image fit"><img src="images/airbnb.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/airbnb.jpeg" alt="" /></a>
 									<p>How is Airbnb being used in and affecting the neighborhoods in Cape Town, South Africa?</p>
 									<ul class="actions special">
-										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="button">Full Story</a></li>
+										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">November 24, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us">EPRA Fuel Press Release Analysis</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">EPRA Fuel Press Release Analysis</a></h2>
 									</header>
-									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="image fit"><img src="images/fuel.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/fuel.jpeg" alt="" /></a>
 									<p>Analysis of Monthly Fuel Prices by the Energy and Petroleum Regulatory Authority</p>
 									<ul class="actions special">
-										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="button">Full Story</a></li>
+										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">November 26, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us">Open Weather Map Analysis in Kenya</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">Open Weather Map Analysis in Kenya</a></h2>
 									</header>
-									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="image fit"><img src="images/weather.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/weather.jpeg" alt="" /></a>
 									<p>Analysis of Weather Patterns in Kenya leveraging data from the OpenWeatherMap API.</p>
 									<ul class="actions special">
-										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" class="button">Full Story</a></li>
+										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">July 8, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="#">Google Search Flight Bookings Analysis</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">Google Search Flight Bookings Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/flight search.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/flight search.jpeg" alt="" /></a>
 									<p>Analysis of Google Searches for outgoing flights from the Jomo Kenyatta International Airport.</p>
 									<ul class="actions special">
-										<li><a style="text-transform: none; font-family: 'Aptos';" href="#" class="button">Full Story</a></li>
+										<li><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">January 14, 2024</span>
-										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="#">Google Search Hotel Bookings Analysis</a></h2>
+										<h2 style="text-transform: none; font-family: 'Aptos';"><a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;">Google Search Hotel Bookings Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/hotel.jpeg" alt="" /></a>
+									<a href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="image fit"><img src="images/hotel.jpeg" alt="" /></a>
 									<p>A Comparison Analysis of Google Searches for Hotels in Nairobi and Mombasa, Kenya.</p>
 									<ul class="actions special">
-										<li ><a style="text-transform: none; font-family: 'Aptos';" href="#" class="button">Full Story</a></li>
+										<li ><a style="text-transform: none; font-family: 'Aptos';" href="https://rpubs.com/datanerdke/eda_medical_insurance_us" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
