--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 
 <html>
 	<head>
-		<title>Adrian Julius Aluoch</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	    <title>Adrian Julius Aluoch - Data Analytics Professional</title>
+	    <meta charset="utf-8" />
+	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	
+	    <!-- SEO Meta Description -->
+	    <meta name="description" content="Data Analytics Professional skilled in SQL, Python, R, Power BI, and Tableau. Passionate about storytelling with data and uncovering insights." />
+	
+	    <!-- Canonical Link (Ensures search engines prioritize the correct URL) -->
+	    <link rel="canonical" href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
+	
+	    <!-- Open Graph (OG) Tags for Social Media -->
+	    <meta property="og:title" content="Adrian Julius Aluoch - Data Analytics Professional" />
+	    <meta property="og:description" content="Expert in SQL, Python, R, and Power BI. Passionate about storytelling with data and uncovering insights." />
+	    <meta property="og:url" content="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
+	    <meta property="og:type" content="profile" />
+	    
+	    <!-- Stylesheets -->
+	    <link rel="stylesheet" href="assets/css/main.css" />
+	    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+
 	<body class="is-preload", style="font-family: 'Aptos' !important;">
 
 		<!-- Wrapper -->
