--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 
 <html>
 	<head>
-	    <title>Adrian Julius Aluoch - Data Analytics Professional</title>
+	    <title>Adrian Julius Aluoch - Data Analyst</title>
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	
 	    <!-- SEO Meta Description -->
-	    <meta name="description" content="Data Analytics Professional skilled in SQL, Python, R, Power BI, and Tableau. Passionate about storytelling with data and uncovering insights." />
+	    <meta name="description" content="Data Analytics Professional skilled in SQL, Python, R, Microsoft Excel, Google Sheets, Microsoft Power BI, Tableau and Google BigQuery. Passionate about turning raw data into meaningful insights that drive business decisions." />
 	
 	    <!-- Canonical Link (Ensures search engines prioritize the correct URL) -->
 	    <link rel="canonical" href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
 	
 	    <!-- Open Graph (OG) Tags for Social Media -->
-	    <meta property="og:title" content="Adrian Julius Aluoch - Data Analytics Professional" />
-	    <meta property="og:description" content="Expert in SQL, Python, R, and Power BI. Passionate about storytelling with data and uncovering insights." />
+	    <meta property="og:title" content="Adrian Julius Aluoch - Data Analyst" />
+	    <meta property="og:description" content="Data Analytics Professional skilled in SQL, Python, R, Microsoft Excel, Google Sheets, Microsoft Power BI, Tableau and Google BigQuery. Passionate about turning raw data into meaningful insights that drive business decisions." />
 	    <meta property="og:url" content="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
 	    <meta property="og:type" content="profile" />
 	    
@@ -33,7 +33,7 @@
 						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br />
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br />
-						Google Sheets, Microsoft Power Bi and Tableau.</p>
+						Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
