--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">X</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
