--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	    <meta property="og:type" content="profile" />
 	    
 	    <!-- Stylesheets -->
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	    <link rel="stylesheet" href="assets/css/main.css" />
 	    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -48,7 +49,7 @@
 					<nav id="nav">
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">X</span></a></li>
+							<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/adrianjuliusaluoch" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
