--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://x.com/julius68603?t=vWcfeIvdW1SYU47dz4EzpQ&s=08" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-							<li><a href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/adrianjuliusaluoch" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=61551349761082" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://x.com/julius68603?t=vWcfeIvdW1SYU47dz4EzpQ&s=08" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+							<li><a href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/adrianjuliusaluoch" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
