--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo", style="text-transform: none; font-family: 'Aptos'; font-weight: bold;">Welcome</a>
+						<a href="#main" class="logo", style="text-transform: none; font-family: 'Aptos'; font-weight: bold;">Welcome</a>
 					</header>
 
 				<!-- Nav -->
