--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br />
+						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br/>
 						Data Analyst</h1>
-						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br />
-						Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
+						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel, Google Sheets,<br/>
+						Microsoft Power Bi, Tableau and Google BigQuery.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
