--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	
 	    <!-- SEO Meta Description -->
-	    <meta name="description" content="Data Analytics Professional skilled in SQL, Python, R, Microsoft Excel, Google Sheets, Microsoft Power BI, Tableau and Google BigQuery. Passionate about turning raw data into meaningful insights that drive business decisions." />
+	    <meta name="description" content="Skilled in SQL, Python, R, Microsoft Excel, Google Sheets, Microsoft Power BI, Tableau and Google BigQuery. Passionate about turning raw data into meaningful insights that drive business decisions." />
 	
 	    <!-- Canonical Link (Ensures search engines prioritize the correct URL) -->
 	    <link rel="canonical" href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
