--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	    <meta name="description" content="Skilled in SQL, Python, R, Microsoft Excel, Google Sheets, Microsoft Power BI, Tableau and Google BigQuery. Passionate about turning raw data into meaningful insights." />
 	
 	    <!-- Canonical Link (Ensures search engines prioritize the correct URL) -->
-	    <link rel="canonical" href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" />
+	    <link rel="canonical" href="https://adrianjuliusaluoch.github.io/" />
 	
 	    <!-- Open Graph (OG) Tags for Social Media -->
 	    <meta property="og:title" content="Adrian Julius Aluoch - Data Analyst" />
