--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br/>
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
+						<ul>
+						    <li>
+						        <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon solid fa-file">
+						            <span class="label">📄 View Resume (PDF)</span>
+						        </a>
+						    </li>
+						</ul>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -50,7 +57,6 @@
 							<li><a href="https://x.com/julius68603?t=vWcfeIvdW1SYU47dz4EzpQ&s=08" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/adrianjuliusaluoch" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon solid fa-file"><span class="label">Resume</span></a></li>
 						</ul>
 					</nav>
 
