--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
 						<ul>
 						    <li>
-						        <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon solid fa-file">
+						        <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
 						            <span class="label">📄 View Resume (PDF)</span>
 						        </a>
 						    </li>
