--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br/>
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
-						<span></span><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
+						<p></span><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
 						            <span class="label">📄 View Resume (PDF)</span>
 						        </a>
-						</span>
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
