--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 						<h1 style="font-size: 4.4rem; text-transform: none; font-family: 'Aptos';">Adrian Julius Aluoch<br/>
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
-						<p></span><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
+						<p>
+						        <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
 						            <span class="label">📄 View Resume (PDF)</span>
 						        </a>
 						</p>
