--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
 						<p>
-						        <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;">📄 View Resume (PDF)</a>
+						    <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" style="font-style: normal;">📄 View Resume (PDF)</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
