--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 						Data Analyst</h1>
 						<p style="font-style: normal;">Skilled in SQL, Python, R, Microsoft Excel,<br/>Google Sheets, Microsoft Power Bi, Tableau and Google BigQuery.</p>
 
-						<p style="margin-bottom: 5px;">
-						    <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" style="font-style: normal;">📄 View Resume (PDF)</a>
+						<p style="margin-bottom: -5px; margin-bottom: 5px;">
+						    <a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;" style="font-style: normal;">📄 View Resume</a>
 						</p>
 						
 						<ul class="actions">
