--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<li><a href="https://x.com/julius68603?t=vWcfeIvdW1SYU47dz4EzpQ&s=08" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.linkedin.com/in/adrian-julius-aluoch-b43184333/" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/adrianjuliusaluoch" target="_blank" onclick="window.open(this.href, '_blank'); return false;" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;"><span class="label">Resume</span></a></li>
+							<li style = "font-size: 17px !important;"><a href="resume.pdf" target="_blank" onclick="window.open(this.href, '_blank'); return false;"><span class="label">Resume</span></a></li>
 						</ul>
 					</nav>
 
